added files used to build docker image and push

--- a/cog.yaml
+++ b/cog.yaml
@@ -60,20 +60,21 @@ build:
     - "protobuf==5.27.2"
     - "numpy==1.26.4"
     - "bitsandbytes>=0.41.1"
+    - "aiohttp==3.8.5"
+    - "pget"
   system_packages:
     - "ffmpeg"
     - "rsync"
   run:
     - pip install --no-deps --force-reinstall 'huggingface-hub[fast_download]'
-    - HF_HUB_ENABLE_HF_TRANSFER=1 python -c "from huggingface_hub import snapshot_download; snapshot_download('LanguageBind/Video-LLaVA-7B-hf', repo_type='model', local_files_only=False)"
     - echo "video-llava env is ready!"
 
 # environment:
 # HUGGING_FACE_HUB_TOKEN: ""
-# HF_HUB_ENABLE_HF_TRANSFER: "1"
+#  HF_HUB_ENABLE_HF_TRANSFER: "1"
 
 predict: "predict.py:Predictor"
-image: "r8.im/uncensored-com/video-llava-7b-hf"
+image: "r8.im/n1jl0091/video-llava-7b-hf_replicate_n1jl0091"
 
 # Added concurrency configuration
 concurrency:
